force-app/core/main/default/objects/Demo_Persona_Kpi__c/Demo_Persona_Kpi__c.object-meta.xml
<CustomObject>
    <label>Persona KPI Tile</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Persona KPI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona KPI Tiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>