force-app/core/main/default/objects/Demo_Persona_Kpi__c/fields/Is_Highlighted__c.field-meta.xml
<CustomField>
    <fullName>Is_Highlighted__c</fullName>
    <label>Is Highlighted</label>
    <description>If true, the tile renders with an accent border and larger value color (mimics the "Net Worth" tile in the Cumulus screenshot).</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>