force-app/core/main/default/objects/Demo_Persona_Kpi__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>