force-app/core/main/default/objects/Demo_Persona_Kpi__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <referenceTo>Demo_Persona__c</referenceTo>
    <relationshipLabel>KPI Tiles</relationshipLabel>
    <relationshipName>Kpis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>