force-app/core/main/default/objects/Demo_Persona_Kpi__c/fields/Sublabel__c.field-meta.xml
<CustomField>
    <fullName>Sublabel__c</fullName>
    <label>Sublabel</label>
    <description>Small descriptor under the value (e.g. "6 Accounts", "Calculated Insight", "2 Active (Coverage)").</description>
    <length>80</length>
    <type>Text</type>
</CustomField>