force-app/core/main/default/objects/Demo_Persona_Kpi__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <description>Free-form display value (e.g. "$1,326,969", "6 Accounts", "84%").</description>
    <length>60</length>
    <type>Text</type>
</CustomField>